In progress - pre-release
    -

Version 2.0 - 24 August 2019
    - Added support for OpenQASM via the interface "qasm/qasm.h" containing:
          qpp::QCircuit qpp::qasm::read_from_file(const std::string& fname)
            - reads a OpenQASM file and returns the qpp::QCircuit representation
          qpp::QCircuit qpp::qasm::read(std::ifstream& stream)
            - reads an input stream and returns the qpp::QCircuit representation
    - Added corresponding OpenQASM examples in the directory
      "examples/circuits/qasm"
    - Implemented qpp::QCircuit::
          kron()     - Kronecker product with another quantum circuit
                       description
          measureZ() - new overload that allows multiple targets at once
          adjoint()  - in place adjoint of quantum circuit description
          kron()     - in place Kronecker product with another quantum circuit
                       description
    - Implemented the corresponding free functions as friends of qpp::QCircuit:
          qpp::adjoint()     - adjoint of quantum circuit description
          qpp::kron()        - Kronecker product between two quantum circuit
                               descriptions
          qpp::replicate()   - replicates (repeats) a quantum circuit
                               description
          qpp::add_circuit() - adds two quantum circuit descriptions
    - Implemented qudit resetting and discarding functions qpp::QCircuit::
          reset()   - resets qudits in a quantum circuit
                      description by measuring them
                      non-destructively in the computational
                      basis followed by shifting them back to the
                      |0> state
          discard() - discards qudits in a quantum circuit
                      description by measuring them destructively
                      and ignoring the result of the measurement
    - Implemented the corresponding free functions in "instruments.h":